feat: implemented get enum values apis for filtering use in frontend for staffing manager and employee, open api spec updated with these apis
